--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-GOOGLE_ID = 713077441655-52kh54hd7162kel83i1i8mg5lk926f26.apps.googleusercontent.com
-GOOGLE_SECRET = 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
+GOOGLE_ID = 
+GOOGLE_SECRET = 
 
 NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_SECRET = pokokerahasia
+NEXTAUTH_SECRET = 
 
-DATABASE_URL="mongodb+srv://root:randompassword@cluster0.ab1cd.mongodb.net/mydb?retryWrites=true&w=majority"
+DATABASE_URL=""
